<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">

    <include
        layout="@layout/progress_bar"
        android:id="@+id/includeProgressBar" />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        android:elevation="0dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:drawablePadding="8dp"
        android:gravity="center"
        app:icon="@drawable/baseline_insert_photo_24"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        android:elevation="0dp"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:icon="@drawable/baseline_image_search_24"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analyze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>